Fix info section layouts being broken on cards without properties. Fix empty lines in description being tiny.

--- a/resources/cards/card.css
+++ b/resources/cards/card.css
@@ -214,7 +214,7 @@ article section {
     padding: 1px 1px;
     display: grid;
     grid-template-columns: 2em 1fr 2em 1fr;
-    grid-template-rows: 2em [cost]minmax(2em, min-content) repeat(auto-fit, min-content);
+    grid-template-rows: 2em [cost]minmax(2em, min-content) repeat(auto-fit, 2em) [text]minmax(2em, min-content);
     grid-row-gap: 1px;
     justify-content: center;
     /*overflow: hidden;*/
@@ -257,11 +257,13 @@ article section div.wide {
 }
 
 article section .text {
+    grid-area:text;
     grid-column: 1 / 5;
     font-size: 0.8em;
 }
 
 article section .text >* {
+    font-size: 0.9em;
     line-height: 1em;
 }
 
@@ -320,6 +322,10 @@ article main .steps {
 }
 article main .description {
 }
+article main .space {
+    height:0.5em;
+    padding-bottom:0;
+}
 article main big{
     padding-top: 0.5mm;
     font-size: 1.65em;
@@ -336,7 +342,6 @@ article main .bottom {
 }
 
 article main .discipline {
-    padding-top: 1mm;
 }
 
 center.message {
